# enigma2-plugins

./: .cproject  .gitignore  .project  .pydevproject  .sonarcloud.properties  .travis.yml  COPYING  FileScreens.py  Makefile  Makefile.am  README  README.md  Rules-cpp.mak  Rules-po.mak  Rules_noxml-po.mak  __init__.py  a.diff  configure.ac  genmetaindex.py  plugin.py  updateallpo.sh  updatepot.sh  xml2po.py
bitrateviewer/src/bitratecalc/: Makefile.am  bitratecalc.cpp  bitratecalc.h
bonjour/: Makefile.am
bonjour/CONTROL/: control
bonjour/meta/: Makefile.am  plugin_bonjour.xml
bonjour/src/: Bonjour.py  Makefile.am  maintainer.info  plugin.py
eventlist/src/: EventList.py  EventListDisplay.py  Makefile.am  README
logomanager/: Makefile.am
logomanager/CONTROL/: control
logomanager/logodir_hdd/: Makefile.am  moon_radio.mvi
logomanager/meta/: Makefile.am  plugin_logomanager.xml
logomanager/src/: Makefile.am  maintainer.info  plugin.py
merlinmusicplayer/src/merlinmp3player/: Makefile.am  merlinmp3player.cpp  merlinmp3player.h
mytube/po/: Makefile.am  MyTube.pot  ar.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  fi.po  fr.po  fy.po  hr.po  hu.po  is.po  it.po  lt.po  nl.po  no.po  pl.po  pt.po  ru.po  sr.po  sv.po  tr.po
networkbrowser/po/: Makefile.am  NetworkBrowser.pot  ar.po  ca.po  cs.po  da.po  de.po  el.po  en.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  hr.po  hu.po  is.po  it.po  lt.po  nl.po  no.po  pl.po  pt.po  ru.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
networkbrowser/src/lib/: Makefile.am  errors.h  list.c  list.h  main.c  nbtscan.c  nbtscan.h  range.c  range.h  showmount.c  showmount.h  smbinfo.c  smbinfo.h  statusq.c  statusq.h
networkwizard/po/: Makefile.am  NetworkWizard.pot  ar.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  fi.po  fr.po  fy.po  hr.po  hu.po  is.po  it.po  lt.po  nl.po  no.po  pl.po  pt.po  ru.po  sr.po  sv.po  tr.po
partnerbox/src/: Makefile.am  PartnerboxEPGList.py  PartnerboxEPGSelection.py  PartnerboxFunctions.py  PartnerboxSetup.py  RemoteTimerEntry.py  Services.py  __init__.py  maintainer.info  plugin.py  skin_FHD.xml  skin_HD.xml
partnerbox/src/buttons/: Makefile.am
partnerbox/src/icons/: Makefile.am
partnerbox/src/servicewebts/: Makefile.am  servicewebts.cpp  servicewebts.h
permanenttimeshift/src/eitsave/: Makefile.am
setpasswd/po/: Makefile.am  SetPasswd.pot  de.po  en_GB.po  it.po  lt.po  nl.po  pl.po  sr.po  tr.po
vlcplayer/po/: Makefile.am  VlcPlayer.pot  cs.po  de.po  en.po  en_GB.po  es.po  fa.po  fr.po  it.po  lt.po  nl.po  no.po  ru.po  sr.po  sv.po  tr.po
vlcplayer/src/: .cvsignore  Makefile.am  VlcConfig.py  VlcControlHttp.py  VlcControlTelnet.py  VlcFileList.py  VlcMediaList.py  VlcPlayList.py  VlcPlayer.py  VlcServer.py  VlcServerConfig.py  VlcServerList.py  __init__.py  maintainer.info  plugin.py
vlcplayer/src/locale/: VlcPlayer.pot  messages.po
vlcplayer/src/locale/it/: VlcPlayer.po
vlcplayer/src/locale/tr/: VlcPlayer.po
vlcplayer/src/servicets/: Makefile.am  servicets.cpp  servicets.h
weathercomponent/src/: Makefile.am  README
weathercomponent/src/Components/: WeatherMSN.py
weathercomponent/src/Components/Converter/: MSNWeather.py
weathercomponent/src/Components/Renderer/: MSNWeatherPixmap.py
weathercomponent/src/Components/Sources/: MSNWeather.py
webinterface/: .project  Makefile.am  TODO
webinterface/CONTROL/: control
webinterface/etc/: Makefile.am  cacert.pem  server.pem
webinterface/meta/: Makefile.am  plugin_webinterface.xml
webinterface/mobile/: bouquets.html.xml  services.html.xml  subservices.html.xml  timeradd.xml  timeredit.html.xml  timerlist.html.xml  wapremote.html.xml
webinterface/po/: Makefile.am  WebInterface.pot  cs.po  da.po  de.po  es.po  fy.po  it.po  lt.po  nl.po  no.po  pl.po  sr.po  sv.po  tr.po
webinterface/src/: LICENSE  Makefile.am  WebIfConfig.py  WebScreens.py  __init__.py  maintainer.info  plugin.py  webif.py
webinterface/src/WebChilds/: FileStreamer.py  IPKG.py  Makefile.am  MovieStreamer.py  Notepad.py  PlayService.py  RedirecToCurrentStream.py  Screengrab.py  Screenpage.py  ServiceListSave.py  Toplevel.py  Uploader.py
webinterface/src/WebComponents/: Makefile.am
webinterface/src/WebComponents/Converter/: HddInfo.py  Makefile.am  (+7 more)
webinterface/src/etc/: Makefile.am
webinterface/src/m/: Makefile.am  bouquets.html.xml  epg.html.xml  epg2.html.xml  index.html.xml  message.html.xml  movies.html.xml  power.html.xml  services.html.xml  timeraddbyeventid.html.xml  timeredit.html.xml  timers.html.xml  timerservices.html.xml  zap.html.xml
webinterface/src/mobile/: Makefile.am  bouquets.html.xml  epg.html.xml  index.html.xml  power.html.xml  services.html.xml  timerchange.html.xml  timerdelete.html.xml  timeredit.html.xml  timerlist.html.xml  wapremote.html.xml
webinterface/src/wap/: Makefile.am  index.html  remotecontrol.html
webinterface/src/web/: Makefile.am  about.xml  about2.xml  addlocation.xml  autotimerlist.xml  backup.xml  currenttime.xml  delfile.xml  deviceinfo.xml  downmix.xml  emuchangestate.xml  emulist.xml  epgbouquet.xml  epgmulti.xml  epgnext.xml  epgnow.xml  epgnownext.xml  epgsearch.rss.xml  epgsearch.xml  epgservice.xml  epgservicenext.xml  epgservicenow.xml  epgsimilar.xml  external.xml  fetchchannels.xml  getallservices.xml  getaudiotracks.xml  getcurrent.xml  getcurrlocation.xml  getlocations.xml  getpid.xml  getservices.m3u.xml  getservices.xml  gettags.xml  index.html.xml  mediaplayeradd.xml  mediaplayercmd.xml  mediaplayercurrent.xml  mediaplayerlist.xml  mediaplayerload.xml  (+52 more)
webinterface/src/web-data/: IEFixes.htc  Makefile.am  config.js  core.js  gears_handler.js  handler.js  helpers.js  index.html  manifest.json  objects.js  provider.js  statics.js  streaminterface.html  style.css  templates.js  timer.js  tools.js  userprefs.js  vlcplayer.js
wirelesslan/po/: Makefile.am  WirelessLan.nl.po  WirelessLan.pot  ar.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  fi.po  fr.po  fy.po  hr.po  hu.po  is.po  it.po  lt.po  nl.po  no.po  pl.po  pt.po  ru.po  sr.po  sv.po  tr.po
(+3480 files in other folders)
