ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
	3dsettings \
	advhdmi \
	aihdcontroler \
	antiscrollbar \
	aspectratioswitch \
	audiorestart \
	audiosync \
	automaticcleanup \
	automatictimerlistcleanup \
	automaticvolumeadjustment \
	autoresolution \
	autotimer \
	babelzapper \
	birthdayreminder \
	bitrateviewer \
	bonjour \
	cdinfo \
	curlytx \
	dreamexplorer \
	dreamirc \
	dreammediathek \
	dvdbackup \
	dyndns \
	easyinfo \
	easymedia \
	ecasa \
	eibox \
	elektro \
	emailclient \
	emission \
	epgrefresh \
	epgsearch \
	eurotictv \
	eventlist \
	fancontrol2 \
	filebrowser \
	flashexpander \
	fritzcall \
	fstabeditor \
	ftpbrowser \
	genuinedreambox \
	googlemaps \
	growlee \
	imdb \
	infobartunerstate \
	internetradio \
	kiddytimer \
	lastfm \
	letterbox \
	logomanager \
	mediadownloader \
	menusort \
	merlinepg \
	merlinepgcenter \
	merlinmusicplayer \
	meteoitalia \
	mosaic \
	moviecut \
	movielistpreview \
	movieretitle \
	moviesearch \
	movieselectionquickbutton \
	movietagger \
	movieepg \
	mphelp \
	multirc \
	mytube \
	namezap \
	ncidclient \
	netcaster \
	networkbrowser \
	ofdb \
	orfat \
	orfteletext \
	partnerbox \
	passwordchanger \
	permanentclock \
	permanenttimeshift \
	pipservicerelation \
	pipzap \
	pluginhider \
	pluginsort \
	podcast \
	porncenter \
	pushservice \
	quickbutton \
	reconstructapsc \
	remotetimer \
	rsdownloader \
	satloader \
	seekbar \
	serienfilm \
	setpasswd \
	showclock \
	simplerss \
	startupservice \
	startuptostandby \
	subsdownloader2 \
	svdrp \
	tageditor \
	teletext \
	toolkit \
	tvcharts \
	unwetterinfo \
	valixdcontrol \
	videocolorspace \
	virtualzap \
	vlcplayer \
	vps \
	weatherplugin \
	webadmin \
	webcamviewer \
	webbouqueteditor \
	webinterface \
	werbezapper \
	youtubeplayer \
	yttrailer \
	zaphistorybrowser \
	zapstatistic \
	zdfmediathek

metadir = $(datadir)/meta
meta_DATA = index-enigma2-plugins.xml
CLEANFILES = index-enigma2-plugins.xml

index-enigma2-plugins.xml: $(top_srcdir)/genmetaindex.py $(top_srcdir)/*/meta/plugin_*.xml
	$(AM_V_GEN)$(PYTHON) $^ > $@
